--- a/TCG_CollectionGame/Views/Home/Index.cshtml
+++ b/TCG_CollectionGame/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div id="main">
     <div id="button_container">
         <a asp-controller="" asp-action="index">
-            <img id="back" src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
+            <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
         <div id="button_text">Mini Game</div>
     </div>
@@ -16,7 +16,7 @@
 <div id="main" class="mt-3">
     <div id="button_container">
         <a asp-controller="" asp-action="index">
-            <img id="back" src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
+            <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
         <div id="button_text">Trading</div>
     </div>
@@ -24,7 +24,7 @@
 <div id="main" class="mt-3">
     <div id="button_container">
         <a asp-controller="Collection" asp-action="index">
-            <img id="back" src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
+            <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
         <div id="button_text">Collection</div>
     </div>
@@ -32,8 +32,8 @@
 <div id="main" class="mt-5">
     <div id="button_container_big">
         <a asp-controller="" asp-action="index">
-            <img id="back" src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
+            <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
-        <div id="button_text">Open packs</div>
+        <div id="button_text_big">Open packs</div>
     </div>
 </div>
