--- a/TCG_CollectionGame/wwwroot/css/home.css
+++ b/TCG_CollectionGame/wwwroot/css/home.css
@@ -1,7 +1,8 @@
 ﻿body {
+    background-color: #373C50;
     background-image: url(/img/background1.jpg);
-    background-repeat:no-repeat;
-    background-attachment:fixed;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 #main {
     display: flex;
@@ -13,6 +14,13 @@
     position: relative;
     text-align: center;
     color: white;
+    transition: all 0.6s cubic-bezier(.58,-1.09,.31,1.97);
+}
+#button_container:hover{
+    width: 35vh;
+}
+#button_container:active{
+    width: 33vh;
 }
 #button_container_big {
     margin-right: 10vh;
@@ -20,8 +28,26 @@
     position: relative;
     text-align: center;
     color: white;
+    transition: all 0.6s cubic-bezier(.58,-1.09,.31,1.97);
+}
+#button_container_big:hover{
+    width: 55vh;
+}
+#button_container_big:active {
+    width: 53vh;
 }
 #button_text {
+    font-size: 2.5vh;
+    font-weight: bold;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#button_text_big {
+    font-size: 4vh;
+    font-weight: bold;
     pointer-events: none;
     position: absolute;
     top: 50%;
