--- a/TCG_CollectionGame/wwwroot/css/Login.css
+++ b/TCG_CollectionGame/wwwroot/css/Login.css
@@ -55,3 +55,9 @@ div.content {
     color: #cccccc;
     font-weight: bold;
 }
+#msg{
+    -webkit-text-stroke-width: medium;
+    -webkit-text-stroke-color: black;
+    font-weight: 900;
+    color: red;
+}
