--- a/TCG_CollectionGame/Views/Login/Register.cshtml
+++ b/TCG_CollectionGame/Views/Login/Register.cshtml
@@ -18,10 +18,14 @@
             </div>
             <form asp-controller="users" asp-action="create">
                 <div class="form-group mt-5">
-                    <input name="Username" id="login_input" type="text" class="form-control" placeholder="Username">
+                    @if (ViewData["Msg"] != null && ViewData["Msg"] != "")
+                    {
+                        <h3 id="msg" class="mb-2">@ViewData["Msg"]</h3>
+                    }
+                    <input name="Username" id="login_input" type="text" class="form-control" placeholder="Username" required="required" pattern="[A-Za-z0-9].{1,20}">
                 </div>
                 <div class="form-group">
-                    <input name="Password" id="login_input" type="password" class="form-control" placeholder="Password">
+                    <input name="Password" id="login_input" type="password" class="form-control" placeholder="Password" required="required" pattern=".{3,20}">
                 </div>
                 <div class="row">
                     <div class="col">
