added pack page (not done)

--- a/TCG_CollectionGame/Views/Home/Index.cshtml
+++ b/TCG_CollectionGame/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 </div>
 <div id="main" class="mt-5">
     <div id="button_container_big">
-        <a asp-controller="" asp-action="index">
+        <a asp-controller="Pack" asp-action="index">
             <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
         <div id="button_text_big">Open packs</div>
