--- a/TCG_CollectionGame/wwwroot/css/Pack.css
+++ b/TCG_CollectionGame/wwwroot/css/Pack.css
@@ -11,7 +11,7 @@ h1 {
     color: white;
 }
 #SelectText {
-    margin-top: 15vh;
+    margin-top: 10vh;
 }
 
 #Coin_container {
@@ -19,8 +19,14 @@ h1 {
     width: 20vh;
     position: relative;
     text-align: center;
-    color: black;
+    color: white;
+    -webkit-text-stroke: 2px black;
+    font-weight: bolder;
+    transition: all 1.5s ease-in-out;
 }
+    #Coin_container.active {
+        transform: rotate3d(1, 3, 1, 1080deg);
+    }
 #Coin_text {
     pointer-events: none;
     position: absolute;
