sets user test gemaakt + mockdata

--- a/TCG_CollectionGame/Views/Shared/_Layout.cshtml
+++ b/TCG_CollectionGame/Views/Shared/_Layout.cshtml
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - app om asp.net te leren</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link id="swap" rel="stylesheet" href="~/css/site.css" />
     @RenderSection("css", false)
 </head>
 <body>
     <div class="m-5">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 transition-fade" id="swup">
             @RenderBody()
         </main>
     </div>
@@ -22,6 +22,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        function swapStylesheet(sheet) {
+            document.getElementById('swap').setAttribute('href', sheet)
+        }
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
