--- a/TCG_CollectionGame/wwwroot/css/Login.css
+++ b/TCG_CollectionGame/wwwroot/css/Login.css
@@ -64,3 +64,12 @@ div.content {
     font-weight: 900;
     color: red;
 }
+
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+}
+
+html.is-animating .transition-fade {
+    opacity: 0;
+}
