--- a/TCG_CollectionGame/wwwroot/css/Collection.css
+++ b/TCG_CollectionGame/wwwroot/css/Collection.css
@@ -41,3 +41,12 @@ h1 {
     #card_img:hover {
         width: 35vh;
     }
+
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+}
+
+html.is-animating .transition-fade {
+    opacity: 0;
+}
