--- a/TCG_CollectionGame/wwwroot/css/site.css
+++ b/TCG_CollectionGame/wwwroot/css/site.css
@@ -72,3 +72,12 @@ body {
     white-space: nowrap;
     line-height: 60px; /* Vertically center the text there */
 }
+
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+}
+
+html.is-animating .transition-fade {
+    opacity: 0;
+}
