added card unit tests

--- a/TCG_CollectionGame/Views/Shared/_Layout.cshtml
+++ b/TCG_CollectionGame/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="m-5">
-        <main role="main" class="pb-3 transition-fade" id="swup">
+        <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
