added ccs for trade and added base layout of trade views

--- a/TCG_CollectionGame/Views/Home/Index.cshtml
+++ b/TCG_CollectionGame/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
 </div>
 <div id="main" class="mt-3">
     <div id="button_container">
-        <a asp-controller="" asp-action="index">
+        <a asp-controller="Trade" asp-action="index">
             <img src="~/img/Button1.png" width="100%" onmouseover="this.src='/img/Button2.png'" onmouseout="this.src='/img/Button1.png'" onmousedown="this.src='/img/Button3.png'" />
         </a>
         <div id="button_text">Trading</div>
