--- a/TCG_CollectionGame/wwwroot/css/Trade.css
+++ b/TCG_CollectionGame/wwwroot/css/Trade.css
@@ -32,3 +32,22 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+[type=radio] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+[type=radio] + img {
+  cursor: pointer;
+}
+
+    [type=radio]:hover + img {
+        outline: 2px solid #f00;
+    }
+
+    [type=radio]:checked + img {
+        outline: 4px solid #f00;
+    }
